# netsuite-rs

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  metadata_api.rs  oauth1.rs  params.rs  requester.rs  response.rs  rest_api.rs  suiteql.rs
src/cli/: cli.rs  env.rs  error.rs  helpers.rs  ini.rs  main.rs  mod.rs  openapi-docs.html  opts.rs
tests/: authentication.rs  suiteql.rs
