[package]
name = "netsuite"
description = "Library for making requests to the NetSuite REST APIs."
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Jacob Magnusson <m@jacobian.se>"]
repository = "https://github.com/jmagnusson/netsuite-rs"
documentation = "https://docs.rs/netsuite/"
homepage = "https://github.com/jmagnusson/netsuite-rs"
readme = "README.md"
keywords = ["netsuite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.2.0"
thiserror = "1.0.30"
clap = "3.0.0-beta.5"
env_logger = "0.9.0"
log = "0.4.14"
http = "0.2.5"
ring = "0.16.20"
rand = "0.8.4"
percent-encoding = "2.1.0"
base64 = "0.13.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68", features = ["preserve_order"] }

[dev-dependencies]
httpmock = "0.6.2"
