[package]
name = "netsuite"
description = "Library for making requests to the NetSuite REST APIs."
version = "0.7.0"
edition = "2021"
license = "MIT"
authors = ["Jacob Magnusson <m@jacobian.se>"]
repository = "https://github.com/jmagnusson/netsuite-rs"
documentation = "https://docs.rs/netsuite/"
homepage = "https://github.com/jmagnusson/netsuite-rs"
readme = "README.md"
keywords = ["netsuite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2"
thiserror = "1"
clap = { version = "3", features = ["derive", "env"], optional = true }
env_logger = "0.9"
log = "0.4"
http = "0.2"
ring = "0.16"
rand = "0.8"
percent-encoding = "2"
base64 = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
configparser = "3"
dirs = "4"
tiny_http = { version = "0.11", optional = true }
itertools = "0.10"

[dev-dependencies]
httpmock = "0.6"
rstest = "0.12"
tiny_http = { version = "0.11" }

[features]
cli = ["clap", "tiny_http"]

[[bin]]
name = "netsuite"
required-features = ["cli"]
